# CBL-multi-new

./: (non)hotspot_dictionary.json  README.md  hotspot_dictionary.json  pyproject.toml
EDA_test/: data.py  eda.json  graphs.py  main.py
notebooks/: correlation_test.ipynb  cv_evaluation.ipynb  cv_evaluation_hotspots.ipynb  explainability.ipynb  first.ipynb  historical_analysis.ipynb  identify_hotspots_test.ipynb  lsoa_sampling.ipynb  temp_based_forcasting.ipynb
scripts/: simplify_geojson.py
src/: main.py
src/dashboard/: .env.example  README.md  run.sh
src/dashboard/app/: main.py
src/dashboard/app/Controllers/: AlertController.py  BaseController.py  ExplainabilityController.py  ForecastController.py  HistoricalController.py  SavingsController.py
src/dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/etl/: config.py  main.py
src/etl/extract/: download_archives.py  unzip_archives.py
src/etl/load/: write_parquet.py
src/etl/transform/: process_csvs.py
src/etl/utils/: checksum.py  file_utils.py  logging_utils.py
src/scripts/: README.md  aggregate_crime_data.py  combine_police_data.py  download_data_kaggle.py  evaluate_holdout.py  fetch_temperature.py  hotspot_to_lsoa_file.py  identify_hotspots.py
src/scripts/scrape_police_station/: match_name.py  police_forces.py  scrape_police.py
src/train/: README.md  config.py  data.py  evaluate.py  explain.py  helper.py  main.py  pipeline.py  plots.py  progress.py  tune.py  worker.py
src/train/models/: __init__.py  base.py  prophet.py  sarima.py  xgboost.py
(+15 files in other folders)
