[project]
name = "cbl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "pandas>=3.0.2",
    "pyarrow>=22.0.0",
    "requests>=2.32.0",
    "prophet>=1.1.5",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.0",
    "xgboost>=2.0.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "pydantic-settings>=2.14.1",
    "pydantic>=2.13.4",
    "numpy>=2.4.4",
    "geopandas>=1.1.3",
    "libpysal>=4.14.1",
    "esda>=2.9.0",
    "rapidfuzz>=3.14.5",
    "pmdarima>=2.1.1",
    "shap>=0.52.0",
]
